raffia/tests/error/tailwindcss/fake-namespace.snap
---
source: raffia/tests/error.rs
---
error: expect token `:`, but found `*`
  ┌─ fake-namespace.css:2:12
  │
2 │   --color- *: initial;
  │            ^
